# bench-mr

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  3rd_party_licenses.md  Benchmark.ipynb  CMakeLists.txt  Dockerfile  DoxygenLayout.xml  Gemfile  LICENSE  PostSmoothing.cpp  PostSmoothing.h  README.md  SVG Paths.ipynb  _config.yml  benchmark_template.json  docker_connect.sh  doxygen.conf  index.md  mainBenchmark.cpp  mainComputeDistances.cpp  mainDistanceCheck.cpp  mainFCLTest.cpp  mainGripsParameters.cpp  mainHomotopy.cpp  mainMovingAiTest.cpp  mainParking.cpp  mainShortening.cpp  mainShowcase.cpp  mainVisualCompare.cpp  mainpage.dox  make_video.sh  package.xml  which_brain.sh
.circleci/: config.yml
.github/workflows/: main.yml
_docs/: backend.md  components.md  contribute.md  getting-started.md  installation.md  results.md
_docs/components/: collision.md  environments.md  extendfun.md  metrics.md  objectives.md  planners.md  postsmoothing.md  sampling.md
_docs/getting-started/: tutorial.md
_docs/installation/: build.md  docker.md
_docs/results/: corridor.md  movingai-planners.md  movingai-smoothers.md
_sass/custom/: custom.scss
assets/results/: home.css
base/: Environment.cpp  Environment.h  EnvironmentStateValidityChecker.h  GridMaze.cpp  GridMaze.h  PathStatistics.hpp  PlannerConfigurator.hpp  PlannerSettings.cpp  PlannerSettings.h  PlannerUtils.hpp  PolygonMaze.cpp  PolygonMaze.h  Primitives.cpp  Primitives.h  TimedResult.hpp  Trajectory.cpp  Trajectory.h  gnode.h  gnode_base.cpp  gnode_base.h
base/environments/: GridMaze.h  PolygonMaze.h
base/src/: EnvironmentStateValidityChecker.cpp  PlannerSettings.cpp  Primitives.cpp
benchmarks/: benchmark_control.json  corridor_radius.py  corridor_radius_10.json  corridor_radius_2.json  corridor_radius_3.json  corridor_radius_4.json  corridor_radius_5.json  corridor_radius_6.json  corridor_radius_6_cc_rs.json  corridor_radius_7.json  corridor_radius_8.json  corridor_radius_9.json  grid_corridor_150.json  grid_corridor_50.json  grid_corridor_50_wide.json  grid_random_100_0.1.json  grid_random_100_0.25.json  movingai_berlin_0_256.json  movingai_berlin_256.json  movingai_boston_1024.json  movingai_boston_1_1024.json  movingai_denver_1_256.json  movingai_newyork_1_512.json  obstacle_ratio_0.01.json  obstacle_ratio_0.010000.json  obstacle_ratio_0.05.json  obstacle_ratio_0.050000.json  obstacle_ratio_0.08.json  obstacle_ratio_0.080000.json  obstacle_ratio_0.100000.json  obstacle_ratio_0.12.json  obstacle_ratio_0.120000.json  obstacle_ratio_0.150000.json  parking1.json  parking2.json  parking3.json  turning_radius_2.000000.json  turning_radius_3.000000.json  turning_radius_4.000000.json  turning_radius_5.000000.json  (+2 more)
docs/: home.css  home.html  index.html  new_planners.html  planners.html  results_list.json  scenario_list.json  smoothers.html  useful.json
docs/avg_results/: avg_result_corridor_radius_3.json  (+14 more)
docs_old/: pdf_to_png.py
experiments/: anytime.cpp  benchmark.cpp  benchmark_corridors.cpp  compute_distances.cpp  generate_corridor_radii_benchmarks.cpp  generate_obstacle_ratio_benchmarks.cpp  generate_turning_radii_benchmarks.cpp  movingai_cities_scenarios.cpp  parking.cpp  posq_testing.cpp  sbpl_testing.cpp  show_polygon_mazes.cpp  smoothing.cpp  thetastar_testing.cpp
fp_models/: ForwardPropagation.h
gui/: PathEvaluation.cpp  PathEvaluation.h  QtVisualizer.cpp  QtVisualizer.h  Table.hpp
metrics/: AOLMetric.h  ClearingMetric.h  CurvatureMetric.h  JerkMetric.h  MaxCurvatureMetric.h  NormalizedCurvatureMetric.h  PathLengthMetric.h  PeaksMetric.h  SpeedArcLengthMetric.h  TrajectoryMetric.h
planners/: AStar.hpp  AbstractPlanner.cpp  AbstractPlanner.h  AbstractPlanner.hpp  Chomp.cpp  Chomp.h  OMPLAnytimePathShortening.hpp  OMPLControlPlanner.hpp  OMPLPlanner.hpp  OMPLSimplifier.hpp  SbplPlanner.cpp  SbplPlanner.h  SmoothThetaStar.cpp  SmoothThetaStar.h  ThetaStar.cpp  ThetaStar.h  smooth_stl_thetastar.h  stl_thetastar.h
plotting/: .gitignore  Benchmark Moving AI.ipynb  Benchmark Polygon Worlds.ipynb  Convergence.ipynb  Corridors.ipynb  Cross Statistics.ipynb  FP Planners.ipynb  Frontend.ipynb  GRIPS in Polygon Environment.ipynb  Image Grid Maze.ipynb  Optimization Objective.ipynb  Planner Statistics.ipynb  Polygon Maze Generation.ipynb  Polygon Mazes.ipynb  Polygon Worlds Testing.ipynb  README.md  SBPL Debugging.ipynb  Sampling vs. Anytime.ipynb  Smoothing.ipynb  Steer Functions.ipynb  Steering and Forward Propagation.ipynb  Timing Details.ipynb  Trajectories.ipynb  color.py  definitions.py  json_table.py  main.py  mpb.py  plot_aggregate.py  plot_convergence.py  plot_env.py  plot_stats.py  plot_trajectory.py  plot_trajectory_convergence.py  polygon_maze_generator.py  requirements.txt  retrieve.py  retrieveAllData.py  retrieveTable.py  table.py  (+2 more)
python/: Collision Detection.ipynb  Experiment Random, Halton, State-Lattice.ipynb  FP Planners.ipynb  Image Grid Maze.ipynb  Metrics.ipynb  Polygon Maze Generation.ipynb  README.md  Random vs Deterministic.ipynb  Sampling vs. Anytime.ipynb  Steering and Forward Propagation.ipynb  __init__.py  benchmark_corridor.py  definitions.py  mpb.py  plot_convergence.py  plot_env.py  plot_stats.py  plot_trajectory_convergence.py  polygon_maze_generator.py  requirements.txt  retrieve.py  retrieveAllData.py  series.py  settings.py
results/: corridor_radius_3.json  corridor_radius_4.json  corridor_radius_6_cc_rs.json  corridor_radius_8.json  grid_corridor_100_0.1.json  grid_corridor_150.json  grid_corridor_50.json  grid_corridor_50_wide.json  movingai_berlin_256.json  movingai_denver_256.json  obstacle_ratio_0.12.json  smoothers.json  turning_radius2.000000  turning_radius3.000000  turning_radius4.000000.json  turning_radius5.000000  turning_radius6.000000  warehouse.json
sbpl_mprim/: genmprim.m  unicycle_0.0625.mprim
steer_functions/: Steering.h  steer_base.h
utils/: Log.cpp  Log.h  OptimizationObjective.cpp  OptimizationObjective.h  PathEvaluation.hpp  PlannerUtils.hpp  ScenarioLoader.cpp  ScenarioLoader.h  Stopwatch.hpp  SvgPolygonLoader.hpp
(+1414 files in other folders)
